Bug 1258768 - Check compositor backends before casting. r=dvander