gfx/layers/basic/BasicCompositor.cpp
@@ -625,6 +625,14 @@ BasicCompositor::EndFrameForExternalComposition(const gfx::Matrix& aTransform)
   mDidExternalComposition = true;
 }
 
+BasicCompositor*
+AssertBasicCompositor(Compositor* aCompositor)
+{
+  BasicCompositor* compositor = aCompositor ? aCompositor->AsBasicCompositor()
+                                            : nullptr;
+  MOZ_DIAGNOSTIC_ASSERT(!!compositor);
+  return compositor;
+}
 
 } // namespace layers
 } // namespace mozilla
