gfx/layers/d3d11/CompositorD3D11.h
@@ -45,6 +45,8 @@ public:
   CompositorD3D11(CompositorBridgeParent* aParent, nsIWidget* aWidget);
   ~CompositorD3D11();
 
+  virtual CompositorD3D11* AsCompositorD3D11() override { return this; }
+
   virtual bool Initialize() override;
   virtual void Destroy() override {}
   virtual void DetachWidget() override { mWidget = nullptr; }
